add bloch spheres

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(SDL2 REQUIRED)
 
-add_executable(grover_search main.cpp)
+add_executable(grover_search main.cpp quantum_viz_bloch.cpp)
 
 target_include_directories(grover_search PRIVATE ${SDL2_INCLUDE_DIRS})
 target_link_libraries(grover_search PRIVATE ${SDL2_LIBRARIES})
